--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -19,11 +19,11 @@
   .add-link-button {
     position: absolute;
     top: 5%;
-    right: 5%; 
+    right: 5%;
   }
 
-  h1  {
-    margin: 0;
+  h2  {
+    margin: .5rem;
     padding: 0;
     color: #444444;
 
