--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -5,10 +5,11 @@
   flex-direction: column;
   align-items: center;
   animation: fade-in 2s forwards;
-  margin-top: 1rem;
   position: relative;
+  overflow: hidden;
 
   .profile-photo {
+    margin-top: 1rem;
     width: 100px;
     height: 100px;
     border-radius: 100%;
