--- a/client/src/components/LandingPageForm/LandingPageForm.scss
+++ b/client/src/components/LandingPageForm/LandingPageForm.scss
@@ -1,16 +1,77 @@
 .LandingPageForm {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #006494;
+  color: white;
+  height: 10rem;
+  border-radius: 10px;
+  width: 25rem;
+  max-width: 90%;
+  height: 10rem;
+  margin-bottom: 1rem;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+  -webkit-animation: slide-in-fwd-bottom 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-fwd-bottom 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  z-index: 1;
 
   .form-label {
-    height: 5rem;
-    margin-bottom: 1rem;
     display: flex;
-    justify-content: space-around;
     flex-direction: column;
+    align-items: center;
 
-    input {
-      padding: 1rem;
+    .form-container {
+      display: flex;
+      margin-top: 1rem;
+      width: 100%;
+
+      .input {
+        color: white;
+        outline: none;
+        border: none;
+      }
+
+      .submit {
+        border: 2px solid white;;
+        color: white;
+        border-radius: 0px 10px 10px 0px;
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+
+      .Mui-focused {
+        color: white;
+      }
+
+      .MuiOutlinedInput-notchedOutline {
+        border: 2px solid white;
+        border-radius: 10px 0px 0px 10px;
+      }
     }
+  }
+}
+
+
+ @-webkit-keyframes slide-in-fwd-bottom {
+  0% {
+    -webkit-transform: translateZ(-1400px) translateY(800px);
+            transform: translateZ(-1400px) translateY(800px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+            transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-fwd-bottom {
+  0% {
+    -webkit-transform: translateZ(-1400px) translateY(800px);
+            transform: translateZ(-1400px) translateY(800px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+            transform: translateZ(0) translateY(0);
+    opacity: 1;
   }
 }
