--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,6 +7,7 @@
   margin: 0;
   overflow: hidden;
   position: relative;
-  background-color: #d6e0f0;
   font-family: 'Roboto';
+  background-color: #d9d9d9;
+
 }
