--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -4,23 +4,8 @@
   align-items: center;
   width: 100%;
   height: 15%;
-  background-color: #393b44;
+  background-color: #13293d;
   overflow: hidden;
   transition: all ease-in .2s;
 }
 
-@media screen and (max-width: 800px) {
-  .Header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 10%;
-    background-color: #393b44;
-    transition: all ease-out .5s;
-
-    .Logo {
-      transform: scale(.75);
-    }
-  }
-}
