--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -11,20 +11,22 @@ $color5: #ebebeb;
   top: 0;
   margin: 0;
   padding: 0;
+  pointer-events: none;
 
   .toggle-button {
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    pointer-events: all;
     position: fixed;
-    top: 25px;
-    right: 25px;
+    top: 2.5%;
+    right: 2.5%;
     z-index: 100;
     height: 3rem;
     width: 3rem;
-    background: #30464e;
+    background: #444444;
     border-radius: 100%;
     cursor: pointer;
     outline: none;
     box-shadow: 0px 0px 15px rgba(70, 70, 70, 0.1);
-    border: 2px solid rgba(70, 70, 70, 0.25);
 
     svg {
       fill: white;
@@ -44,6 +46,7 @@ $color5: #ebebeb;
   }
 
   .side-menu {
+    pointer-events: all;
     overflow: hidden;
     position: fixed;
     right: 20%;
@@ -112,6 +115,7 @@ $color5: #ebebeb;
     .toggle-button {
       display: block;
     }
+
     .side-menu {
       display: flex;
       width: 60%;
