--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -2,19 +2,75 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  
+  width: 100vw;
+  height: 100vh;
+  background-color: #d6e0f0;
+
+  h1 {
+    color: #13293d;
+  }
+
   form {
-    border: 1px solid lime;
-    width: 20rem;
+    -webkit-animation: slide-in-fwd-bottom 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-in-fwd-bottom 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    border-radius: 10px;
+    border: 2px solid rgba(0, 0, 0, 0.5);
     height: 20rem;
+    width: 20rem;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
+    background-color: #006494;
+    color: white;
 
     label {
       display: flex;
       flex-direction: column;
     }
+
+    .submit {
+      border: 2px solid white;;
+      color: white;
+      border-radius: 10px;
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    .Mui-focued {
+      border-color: white;
+      outline: none
+    }
+    .MuiOutlinedInput-notchedOutline {
+      outline: none;
+      color: white;
+      border: 2px solid white !important;
+    }
+  }
+}
+
+
+
+ @-webkit-keyframes slide-in-fwd-bottom {
+  0% {
+    -webkit-transform: translateZ(-1400px) translateY(800px);
+            transform: translateZ(-1400px) translateY(800px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+            transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-fwd-bottom {
+  0% {
+    -webkit-transform: translateZ(-1400px) translateY(800px);
+            transform: translateZ(-1400px) translateY(800px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+            transform: translateZ(0) translateY(0);
+    opacity: 1;
   }
 }
