--- a/client/src/components/LandingPage/LandingPage.scss
+++ b/client/src/components/LandingPage/LandingPage.scss
@@ -1,27 +1,48 @@
 .LandingPage {
-  height: 80%;
+  height: 85%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  position: relative;
+
+  .particles {
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+  }
 
   h1 {
+    font-size: 2rem;
+    color: #13293d;
     text-align: center;
-    font-size: 3rem;
+    height: 30%;
+    width: 90%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    z-index: 1;
   }
 
   .auth-container {
+    background-color: #444444;
+    margin: 0;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    height: 40%;
+    height: 60%;
+    z-index: 2;
 
-    div {
+    .auth-redirect-container {
       width: 40%;
-      height: 80%;
-      background-color: white;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+      height: 50%;
+      background-color: #e8f1f2;
+      color: #13293d;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -29,6 +50,8 @@
       border-radius: 20px;
       font-size: 1rem;
       text-align: center;
+      overflow: hidden;
+      margin: 1rem 0;
 
       a {
         text-decoration: none;
