--- a/client/src/components/LinkForm/LinkForm.scss
+++ b/client/src/components/LinkForm/LinkForm.scss
@@ -1,3 +1,9 @@
+$color1: #eeeeee;
+$color2: #00adb5;
+$color3: #393e46;
+$color4: #222831;
+
+
 .LinkForm {
   border: 2px solid grey;
   position: absolute;
