--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,11 +1,29 @@
+$color1: #eeeeee;
+$color2: #00adb5;
+$color3: #393e46;
+$color4: #222831;
+
+
 .Header {
   display: flex;
   justify-content: center;
+  position: sticky;
+  top: 0;
   align-items: center;
   width: 100%;
-  height: 15%;
-  background-color: #13293d;
+  height: 100%;
+  background-color: $color4;
   overflow: hidden;
   transition: all ease-in .2s;
+  animation: header-animation .75s ease-in .75s forwards;
 }
 
+@keyframes header-animation {
+  from {
+    height: 100%;
+  }
+  
+  to {
+    height: 15%;
+  };
+}
