--- a/client/src/components/LandingPage/LandingPage.scss
+++ b/client/src/components/LandingPage/LandingPage.scss
@@ -1,25 +1,53 @@
+$color1: #eeeeee;
+$color2: #00adb5;
+$color3: #393e46;
+$color4: #222831;
+$color5: #33373d;
+
+
+
 .LandingPage {
   height: 85%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   position: relative;
+  background-color: $color3;
 
   .particles {
     position: absolute;
     top: 0;
     height: 100vh;
     width: 100vw;
+    opacity: .5;
+  }
+
+  .cta {
+    height: 30%;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
 
   h1 {
-    font-size: 2rem;
-    color: #13293d;
+    font-size: 3rem;
+    color: $color1;
     text-align: center;
-    height: 30%;
-    width: 90%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    z-index: 1;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    font-weight: 200;
+    color: $color1;
+    text-align: center;
     justify-content: center;
     display: flex;
     align-items: center;
@@ -28,34 +56,74 @@
   }
 
   .auth-container {
-    background-color: #444444;
     margin: 0;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    height: 60%;
+    height: 30%;
     z-index: 2;
+    background-color: $color4;
+    position: relative;
+    
+    hr {
+      width: 5px;
+      background-color: $color2;
+      height: 50%;
+      border: none;
+      position: absolute;
+    }
 
     .auth-redirect-container {
       width: 40%;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-      height: 50%;
-      background-color: #e8f1f2;
-      color: #13293d;
+      height: 80%;
+      color: white;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: space-evenly;
       align-items: center;
       border-radius: 20px;
-      font-size: 1rem;
       text-align: center;
       overflow: hidden;
-      margin: 1rem 0;
+
+      h4 {
+        margin: 0;
+        font-size: 2rem;
+      }
+
+      button {
+        border-color: white;
+        color: white;
+      }
 
       a {
         text-decoration: none;
       }
     }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .LandingPage {
+    h1 {
+      font-size: 2rem;
+    }
+    .auth-container {
+      .auth-redirect-container {
+        h4 {
+          font-size: 1rem;
+        }
+
+      }
+    }
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
