--- a/client/src/components/LandingPageForm/LandingPageForm.scss
+++ b/client/src/components/LandingPageForm/LandingPageForm.scss
@@ -1,15 +1,19 @@
+$color1: #eeeeee;
+$color2: #00adb5;
+$color3: #393e46;
+$color4: #222831;
+
+
 .LandingPageForm {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #006494;
-  color: white;
+  background-color: $color2;
+  color: $color1;
   height: 10rem;
   border-radius: 10px;
   width: 25rem;
   max-width: 90%;
-  height: 10rem;
-  margin-bottom: 1rem;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
   -webkit-animation: slide-in-fwd-bottom 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   animation: slide-in-fwd-bottom 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
@@ -19,31 +23,40 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
 
     .form-container {
       display: flex;
       margin-top: 1rem;
       width: 100%;
 
+      .MuiInputBase-input {
+        color: $color1;
+      }
+
       .input {
-        color: white;
+        color: $color1;
         outline: none;
         border: none;
       }
 
+      label {
+        color:$color1;
+      }
+
       .submit {
-        border: 2px solid white;;
-        color: white;
+        border: 2px solid $color1;
+        color: $color1;
         border-radius: 0px 10px 10px 0px;
         background-color: rgba(0, 0, 0, 0.1);
       }
 
       .Mui-focused {
-        color: white;
+        color: $color1;
       }
 
       .MuiOutlinedInput-notchedOutline {
-        border: 2px solid white;
+        border: 2px solid $color1;
         border-radius: 10px 0px 0px 10px;
       }
     }
