--- a/client/src/components/LinkItem/LinkItem.scss
+++ b/client/src/components/LinkItem/LinkItem.scss
@@ -1,3 +1,9 @@
+$color1: #eeeeee;
+$color2: #00adb5;
+$color3: #393e46;
+$color4: #222831;
+
+
 .LinkItem {
   border: 3px solid white;
   border-radius: 5px;
