--- a/client/src/components/LinkPasswordForm/LinkPasswordForm.scss
+++ b/client/src/components/LinkPasswordForm/LinkPasswordForm.scss
@@ -1,3 +1,9 @@
+$color1: #eeeeee;
+$color2: #00adb5;
+$color3: #393e46;
+$color4: #222831;
+
+
 .LinkPasswordForm {
   position: absolute;
   background-color: #444444;
