--- a/client/src/components/NavBar/NavBar.scss
+++ b/client/src/components/NavBar/NavBar.scss
@@ -1,8 +1,8 @@
-$color1: #162447;
-$color2: #1f4068;
-$color3: #1b1b2f;
-$color4: #e43f5a;
-$color5: #ebebeb;
+$color1: #eeeeee;
+$color2: #00adb5;
+$color3: #393e46;
+$color4: #222831;
+
 
 .NavBar {
   width: 100%;
@@ -12,26 +12,27 @@ $color5: #ebebeb;
   margin: 0;
   padding: 0;
   pointer-events: none;
-
+  
   .toggle-button {
-    border: 2px solid rgba(255, 255, 255, 0.5);
     pointer-events: all;
+    border: 3px solid $color1;
     position: fixed;
-    top: 2.5%;
-    right: 2.5%;
+    top: 4.5%;
+    right: 4.5%;
     z-index: 100;
     height: 3rem;
     width: 3rem;
-    background: #444444;
+    background: $color3;
     border-radius: 100%;
     cursor: pointer;
     outline: none;
     box-shadow: 0px 0px 15px rgba(70, 70, 70, 0.1);
+    opacity: 0;
+    animation: fade-in 1s forwards 1s;
 
     svg {
       fill: white;
       transform: scale(2);
-      animation: fade-in 1s forwards;
     }
   }
 
@@ -52,7 +53,8 @@ $color5: #ebebeb;
     right: 20%;
     width: 20%;
     height: 100%;
-    background: rgb(28, 53, 63);
+    background: $color3;
+    border-left: 3px solid white;
     justify-content: center;
     align-items: center;
     z-index: 10;
@@ -65,16 +67,13 @@ $color5: #ebebeb;
       justify-content: center;
       align-items: center;
       list-style: none;
-      padding: 0;
+      padding: 1rem;
       margin: 0;
-      width: max-content;
+      width: 100%;
+      height: 100%;
 
       li {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
+        align-self: flex-start;
 
         a:hover {
           border-bottom: 3px solid rgba(255, 255, 255, 0.13);
@@ -82,7 +81,7 @@ $color5: #ebebeb;
         }
 
         a.active {
-          border-bottom: 3px solid white;
+          border-bottom: 3px solid $color2;
           transition: all ease-in 0.5s;
         }
 
@@ -96,12 +95,32 @@ $color5: #ebebeb;
           text-decoration: none;
           margin: 1rem;
           font-weight: 500;
-          color: $color5;
+          color: $color1;
           font-size: 1.5rem;
           transition: 0.25s color ease-out;
           cursor: pointer;
         }
       }
+    }
+
+    .Logo { 
+      position: absolute;
+      bottom: 0%;
+      transform: scale(.75);
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      z-index: 5;
+    }
+
+    .contact {
+      text-decoration: none;
+      position: absolute;
+      bottom: 2%;
+      text-align: center;
+      width: 100%;
+      font-size: .75rem;
+      color: rgba(255, 255, 255, 0.5);
     }
   }
 }
