--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -17,7 +17,7 @@ $color4: #222831;
   .profile-photo {
     margin-top: 1rem;
     width: 100px;
-    height: 100px;
+    min-height: 100px;
     border-radius: 100%;
     border: 3px solid white;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
