--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -14,6 +14,7 @@ $color4: #222831;
   h1 {
     color: $color1;
     animation: fade-in .6s ease-in forwards;
+    margin: 2rem 0;
   }
 
   form {
@@ -34,6 +35,13 @@ $color4: #222831;
       display: flex;
       flex-direction: column;
     }
+
+    input {
+      color: $color1;
+      outline: none;
+      border: none;
+    }
+
 
     .submit {
       border: 2px solid white;;
