--- a/client/src/components/LinkForm/LinkForm.scss
+++ b/client/src/components/LinkForm/LinkForm.scss
@@ -5,15 +5,15 @@ $color4: #222831;
 
 
 .LinkForm {
-  border: 2px solid grey;
+  border: 2px solid $color2;
   position: absolute;
-  background-color: #393B44;
+  background-color: $color4;
   border-radius: 20px;
   height: 80%;
   width: 90%;
+  top: 2%;
   color: white;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   opacity: 1;
@@ -22,8 +22,8 @@ $color4: #222831;
 
   .close-form-button {
     position: absolute;
-    top: 5%;
-    right: 5%;
+    top: 2.5%;
+    right: 2.5%;
     border-color: white;
     color: white;
     font-weight: 900;
@@ -43,9 +43,12 @@ $color4: #222831;
   }
 
   form {
-    width: 80%;
+    width: 65%;
     height: 100%;
     color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 
     input {
       color: white;
@@ -71,9 +74,14 @@ $color4: #222831;
 
       .toggle {
         position: absolute;
+        border-color: rgba(255, 255, 255, 0.5);
+        color: rgba(255, 255, 255, 0.5);
+        width: 2rem;
         right: 5%;
-        top: 50%;
+        transform: translateY(75%);
         margin: auto 0;
+        background-color: $color4;
+        z-index: 2;
 
         svg {
           transform: scale(1.25);
