--- a/client/src/components/LinkPasswordForm/LinkPasswordForm.scss
+++ b/client/src/components/LinkPasswordForm/LinkPasswordForm.scss
@@ -5,10 +5,103 @@ $color4: #222831;
 
 
 .LinkPasswordForm {
+  border: 2px solid $color2;
   position: absolute;
-  background-color: #444444;
+  background-color: $color4;
+  border-radius: 20px;
+  height: 80%;
+  width: 90%;
+  top: 2%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  transform: translateY(0%);
+  transition: all .5s ease-in;
+  z-index: 5;
+
+    .close-form-button {
+      position: absolute;
+      top: 2.5%;
+      right: 2.5%;
+      border-color: white;
+      color: white;
+      font-weight: 900;
+      font-size: 1rem;
+      transition: all ease-out .3s;
+
+      &:hover {
+        transition: all ease-in .3s;
+        color: rgba(255, 83, 83, .5);
+        transform: scale(1.05);
+      }
+    }
+
+    input {
+      color: white;
+      outline-color: white;
+    }
+
+    label {
+      display: flex;
+      flex-direction: column;
+      margin: .75rem 0;
+    }
+
+    .checkbox {
+      margin: 0;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+
+    .password {
+      position: relative;
+      transition: all .25s ease-in;
+
+      .toggle {
+        position: absolute;
+        border-color: rgba(255, 255, 255, 0.5);
+        color: rgba(255, 255, 255, 0.5);
+        width: 2rem;
+        right: 5%;
+        transform: translateY(75%);
+        margin: auto 0;
+        background-color: $color4;
+        z-index: 2;
+
+        svg {
+          transform: scale(1.25);
+          fill: rgba(255, 255, 255, 0.5);
+        }
+      }
+    }
+
+    .Mui-focued {
+      border-color: white;
+      outline: none
+    }
+    .MuiOutlinedInput-notchedOutline {
+      outline: none;
+      color: white;
+      border: 2px solid white !important;
+    }
+
+
+
+    .submit-button{
+      margin-top: 1rem;
+      color: white;
+      border: 2px solid white;
+    }
+
 }
 
 .LinkPasswordForm.closed {
   opacity: 0;
+  transform: translateY(100%);
+  transition: all .5s ease-in;
+  pointer-events: none;
 }
