--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -28,6 +28,8 @@ $color4: #222831;
     position: absolute;
     top: 5%;
     right: 5%;
+    color: $color1;
+    border-color: $color1;;
   }
 
   h2  {
