--- a/client/src/components/LinksDisplay/LinksDisplay.scss
+++ b/client/src/components/LinksDisplay/LinksDisplay.scss
@@ -12,9 +12,9 @@ $color4: #222831;
   position: relative;
 
   ul {
+    margin-top: 50px;
     border-radius: 10px;
-    border: 2px solid grey;
-    background-color: rgba(144, 144, 144, 0.1);
+    border: 2px solid rgba(128, 128, 128, 0.25);
     list-style: none;
     justify-content: center;
     align-items: flex-start;
