--- a/client/src/components/LinksDisplay/LinksDisplay.scss
+++ b/client/src/components/LinksDisplay/LinksDisplay.scss
@@ -6,13 +6,13 @@ $color4: #222831;
 
 .LinksDisplay {
   width: 100%;
-  height: 100%;
+  height: 55%;
   display: flex;
   justify-content: center;
+  align-items: center;
   position: relative;
 
   ul {
-    margin-top: 50px;
     border-radius: 10px;
     border: 2px solid rgba(128, 128, 128, 0.25);
     list-style: none;
@@ -20,10 +20,10 @@ $color4: #222831;
     align-items: flex-start;
     display: flex;
     width: 90%;
-    height: 60%;
+    height: 90%;
     flex-wrap: wrap;
     overflow-y: scroll;
     overflow-x: hidden;
-    padding: .5rem 0;
+    padding: 0;
   }
 }
