--- a/client/src/containers/Profile/Profile.scss
+++ b/client/src/containers/Profile/Profile.scss
@@ -17,13 +17,14 @@ $color4: #222831;
 
 
   .profile-photo {
-    margin-top: 1rem;
-    width: 100px;
-    min-height: 100px;
+    width: 75px;
+    min-height: 75px;
     border-radius: 100%;
     border: 3px solid $color1;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
     animation: fade-in 2s forwards;
+    margin-top: .5rem;
+
   }
 
   .add-link-button {
@@ -35,9 +36,9 @@ $color4: #222831;
   }
 
   h2  {
-    margin: .5rem;
     padding: 0;
     color: $color1;
+    margin: .5rem 0;
 
     span {
       opacity: .5;
